@@ -6,7 +6,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.CopyOnWriteArrayList;
 
 @Slf4j
 @Component
@@ -14,15 +13,12 @@ public class MarketStreamManager {
 
     /**
      * Хранилище:
-     * SYMBOL → TIMEFRAME → LIST<CANDLE>
-     *
-     * CopyOnWriteArrayList безопаснее и быстрее для frequent-read / rare-write.
+     * SYMBOL → TIMEFRAME → DEQUE<CANDLE>
      */
-    private final Map<String, Map<String, List<Candle>>> cache = new ConcurrentHashMap<>();
+    private final Map<String, Map<String, Deque<Candle>>> cache = new ConcurrentHashMap<>();
 
-    // Максимум свечей — можно менять динамически
+    /** Максимум свечей в памяти */
     private volatile int maxCandles = 1500;
-
 
     // ============================
     // NORMALIZATION
@@ -30,95 +26,132 @@ public class MarketStreamManager {
 
     private String normSymbol(String s) {
         if (s == null) return "";
-        s = s.trim().toUpperCase();
+        s = s.trim().toUpperCase(Locale.ROOT);
 
         int idx = s.indexOf("@");
-        if (idx > 0) s = s.substring(0, idx);
-
+        if (idx > 0) {
+            s = s.substring(0, idx);
+        }
         return s;
     }
 
     private String normTf(String tf) {
         if (tf == null) return "";
-        tf = tf.trim().toLowerCase();
+        tf = tf.trim().toLowerCase(Locale.ROOT);
 
-        if (tf.startsWith("kline_"))
-            return tf.substring(6);
-
+        if (tf.startsWith("kline_")) {
+            tf = tf.substring(6);
+        }
         return tf;
     }
-
 
     // ============================
     // WRITE
     // ============================
 
     public void addCandle(String symbol, String timeframe, Candle candle) {
+
+        if (candle == null) return;
+
         String sym = normSymbol(symbol);
         String tf  = normTf(timeframe);
 
         var tfMap = cache.computeIfAbsent(sym, k -> new ConcurrentHashMap<>());
-        var list  = tfMap.computeIfAbsent(tf, k -> new CopyOnWriteArrayList<>());
+        var deque = tfMap.computeIfAbsent(tf, k -> new ArrayDeque<>());
 
-        if (list.isEmpty()) {
-            list.add(candle);
-            return;
-        }
+        synchronized (deque) {
 
-        Candle last = list.get(list.size() - 1);
+            Candle last = deque.peekLast();
 
-        // обновление текущей свечи (same open-time)
-        if (last.getTime() == candle.getTime()) {
-            list.set(list.size() - 1, candle);
-            return;
-        }
+            // первая свеча
+            if (last == null) {
+                deque.addLast(candle);
+                return;
+            }
 
-        // новая свеча
-        list.add(candle);
+            // обновление текущей свечи
+            if (last.getTime() == candle.getTime()) {
+                deque.pollLast();
+                deque.addLast(candle);
+                return;
+            }
 
-        // ограничение длины
-        if (list.size() > maxCandles) {
-            list.subList(0, list.size() - maxCandles).clear();
+            // защита от старых данных
+            if (candle.getTime() < last.getTime()) {
+                log.debug("⏪ Skip old candle {} < {}", candle.getTime(), last.getTime());
+                return;
+            }
+
+            // новая свеча
+            deque.addLast(candle);
+
+            // ограничение размера
+            while (deque.size() > maxCandles) {
+                deque.pollFirst();
+            }
         }
     }
-
 
     // ============================
     // READ
     // ============================
 
     public List<Candle> getCandles(String symbol, String timeframe, int limit) {
+
         String sym = normSymbol(symbol);
         String tf  = normTf(timeframe);
 
-        var tfMap = cache.getOrDefault(sym, Collections.emptyMap());
-        var list  = tfMap.getOrDefault(tf, Collections.emptyList());
+        var tfMap = cache.get(sym);
+        if (tfMap == null) return List.of();
 
-        if (limit <= 0 || list.size() <= limit)
-            return new ArrayList<>(list);
+        var deque = tfMap.get(tf);
+        if (deque == null || deque.isEmpty()) return List.of();
 
-        return new ArrayList<>(
-                list.subList(list.size() - limit, list.size())
-        );
+        synchronized (deque) {
+
+            if (limit <= 0 || deque.size() <= limit) {
+                return new ArrayList<>(deque);
+            }
+
+            List<Candle> result = new ArrayList<>(limit);
+            Iterator<Candle> it = deque.descendingIterator();
+
+            while (it.hasNext() && result.size() < limit) {
+                result.add(it.next());
+            }
+
+            Collections.reverse(result);
+            return result;
+        }
     }
 
-
     // ============================
-    // EXTRA UTILS (очень полезно)
+    // EXTRA UTILS
     // ============================
 
-    /** Возвращает последнюю свечу */
+    /** Последняя свеча */
     public Candle getLast(String symbol, String timeframe) {
-        List<Candle> l = getCandles(symbol, timeframe, 1);
-        return l.isEmpty() ? null : l.get(0);
+
+        String sym = normSymbol(symbol);
+        String tf  = normTf(timeframe);
+
+        var tfMap = cache.get(sym);
+        if (tfMap == null) return null;
+
+        var deque = tfMap.get(tf);
+        if (deque == null) return null;
+
+        synchronized (deque) {
+            return deque.peekLast();
+        }
     }
 
-    /** Очищает все данные по символу */
+    /** Очистка по символу */
     public void clear(String symbol) {
         cache.remove(normSymbol(symbol));
     }
 
-    /** Задаёт глобальный лимит свечей */
+    /** Глобальный лимит */
     public void setMaxCandles(int max) {
         if (max < 200) max = 200;
         this.maxCandles = max;
@@ -128,7 +161,9 @@ public class MarketStreamManager {
     public Map<String, Integer> stats() {
         Map<String, Integer> m = new HashMap<>();
         for (var e : cache.entrySet()) {
-            int sum = e.getValue().values().stream().mapToInt(List::size).sum();
+            int sum = e.getValue().values().stream()
+                    .mapToInt(Deque::size)
+                    .sum();
             m.put(e.getKey(), sum);
         }
         return m;
